add: Inventory Service
